app/styles/app.scss
@import 'ember-paper';
@import 'color-palette';

body > div.ember-view {
  height: 100%;
}

[full-height], .full-height {
  height: 100%;
}

md-toolbar.md-default-theme.main-toolbar {
  background-color: color('grey', '100');
  color: $dark-contrast-color;

  md-icon, .md-button md-icon {
    color: $dark-contrast-color;
  }
}

md-sidenav {
  md-list-item.active {
    color: color('indigo');
  }
}

.playtest-cards {
  font-size: 0;
}

.playtest-card {
  position: relative;
  display: inline-block;

  &:after {
    content: attr(name);
    position: absolute;
    background: white;
    color: black;
    z-index: 1;
    font-family: sans-serif;
    font-weight: bold;
    font-size: 36px;
    padding: 5px;
    overflow: hidden;
    width: 173px;
    height: 124px;
    top: 37px;
    left: 20px;

    @media print {
      width: 46.6mm;
      height: 33.3mm;
      top: 10.1mm;
      left: 5.4mm;
    }
  }

  img {
    width: 223px;
    height: 310px;

    // Actual Magic cards are 63x88, but we want a bit of leeway.
    @media print {
      width: 60mm;
      height: auto;
    }
  }
}

.problem-cards {
  max-width: 432px;
}

@media print {
  md-sidenav,
  md-toolbar,
  md-card {
    display: none !important;
  }

  body > div.ember-view {
    height: auto;
  }

  body * {
    visibility: hidden;
  }

  .printable, .printable * {
    visibility: visible;
  }
}

